# can_mqtt_ipc

./: CMakeLists.txt  README.md  config.json  install.sh
bridge/: CMakeLists.txt  bridge.cpp  bridge.h  main.cpp
common/can/: can_frame.h  ican_receiver.h  ican_sender.h
common/can/linux/sockets/: can_receiver.cpp  can_receiver.h  can_sender.cpp  can_sender.h
common/config/: config_parser.cpp  config_parser.h
common/sensors/: idata_source.h  sensor_data.cpp  sensors_data.h
common/sensors/emulated/: sensor_data_source.cpp  sensor_data_source.h
presenter/: CMakeLists.txt  README.md  pyproject.toml
presenter/presenter/: __init__.py  main.py
producer/: CMakeLists.txt  main.cpp  producer.cpp  producer.h
services/: bridge.service  presenter.service  producer.service  vcan.service
